clean up css consolidating portfolio-css-rb.css    &

--- a/css/portfolio-css-cat-pg-top.css
+++ b/css/portfolio-css-cat-pg-top.css
@@ -1,10 +1,11 @@
 
-/* ================================ Women's Fashion Shop Page =========================================== */
-/* /* mobile first  | Extra small devices (phones, less than 768px) */
+/* ============ Women's Fashion Shop Page ============ */
+/* ========== mobile first | less than 768px ========= */
+/* ============ Women's Fashion Shop Page ============ */
 
-/* ========================================================== */
-/* ********************** IE | FIX ********************** */
-/* ========================================================== */
+/* ==================================================== */
+/* ********************* IE | FIX ********************* */
+/* ==================================================== */
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .plp-top-cat-pg-hghlt-shops {
     justify-content: space-around;
@@ -13,9 +14,9 @@
  }
 
 
-/* ========================================================== */
-/* ********************** START | HERO ********************** */
-/* ========================================================== */
+/* ==================================================== */
+/* ******************** START | HERO ****************** */
+/* ==================================================== */
 .plp-top-cat-pg-hero {
   background-color: #f69f9c;
 }
@@ -41,9 +42,9 @@
 }
 
 
-/* ========================================================== */
-/* ******************** START | MENU/NAV ******************** */
-/* ========================================================== */
+/* ======================================================== */
+/* ******************* START | MENU/NAV ******************* */
+/* ======================================================== */
 .plp-top-cat-pg-nav-mobile {
   display: block;
 }
@@ -283,9 +284,9 @@
   }
 }
 
-/* ========================================================== */
-/* ******* START | Manual Shops, 2 hardcoded call outs ****** */
-/* ========================================================== */
+/* ======================================================== */
+/* ****** START | Manual Shops, 2 hardcoded call outs ***** */
+/* ======================================================== */
 
 .plp-top-cat-pg-hghlt-shops {
   display: flex;
@@ -486,9 +487,9 @@
   }
 }
 
-/* ========================================================== */
-/* ************** START | whole shop pg styles ************** */
-/* ========================================================== */
+/* ======================================================== */
+/* ************* START | whole shop pg styles ************* */
+/* ======================================================== */
 .plp-top-cat-pg-shop-pg-title {
   font-family: 'Lato';
   font-weight: 700;
@@ -530,9 +531,9 @@ hr {
   }
 }
 
-/* ========================================================== */
-/* **************** START | shop by category **************** */
-/* ========================================================== */
+/* ======================================================== */
+/* *************** START | shop by category *************** */
+/* ======================================================== */
 .plp-top-cat-pg-shp-by-ctgy-nav-icons {
   display: flex;
   display: -ms-flex;
@@ -610,7 +611,7 @@ hr {
 }
 
 /*==================
- min width 769px
+ min width 796px
 ===================*/
 @media screen and (min-width:796px){
   .plp-top-cat-pg-shp-by-ctgy-itm{
