combined portfolio-css-shop-by-cat.css to portfolio-css.css and updated the css links on web-design-portfolio-flex-column-to-row.html. Updated portfolio-css-shop-by-cat.css lines 104, 166 with class specification and closing tag to 1024px breakpoint.

--- a/css/portfolio-css-shop-by-cat.css
+++ b/css/portfolio-css-shop-by-cat.css
@@ -101,7 +101,7 @@
   font-weight: bold;
 }
 
-hr {
+.holiday-toy-finder-shop-by-age-pb hr {
   display: block;
   width: 100%;
   height: 1px;
@@ -163,7 +163,7 @@ hr {
  min width 1024px
 ===================*/
 @media screen and (min-width:1024px){
-  hr {
+  .holiday-toy-finder-shop-by-age-pb hr {
     display: none;
   }
 
@@ -184,6 +184,7 @@ hr {
   .toy-pb-shop-by-age-option-block {
     width: 24%;
   }
+}
 
 
 }
