--- a/css/portfolio-css.css
+++ b/css/portfolio-css.css
@@ -927,6 +927,123 @@ div.mktg-theme-wrapped-h4 a {
   text-decoration: none;
 }
 
+/* ===================================================== */
+/* ************* START | shop by category ************** */
+/* ===================================================== */
+.holiday-toy-finder-shop-by-age-pb {
+  display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-between;
+  -ms-justify-content: space-between;
+  margin-top: 3%;
+}
+
+/* ************************************** */
+/* START | toy-pb-shop-by-age-title-block */
+/* ************************************** */
+.toy-pb-shop-by-age-title-block {
+  width: 60%;
+}
+
+.toy-pb-shop-by-age-title-block p {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+  font-size: 24px;
+  font-weight: 800;
+  color: #333333;
+  margin-bottom: 0;
+}
+
+/* ************************************* */
+/* *** START | toy-pb-shop-all-block *** */
+/* ************************************* */
+.toy-pb-shop-all-block {
+  width: 38%;
+}
+
+.toy-pb-shop-all-block a {
+  text-decoration: none;
+}
+
+.toy-pb-shop-all-btn {
+  width: 100%;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #11598e;
+}
+
+.toy-pb-shop-all-btn p{
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+  font-weight: bold;
+}
+
+/* *************************************** */
+/* START | toy-pb-shop-by-age-4optns-block */
+/* *************************************** */
+.toy-pb-shop-by-age-4optns-block {
+  width: 100%;
+  display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  flex-flow: row wrap;
+  -ms-flex-flow: row wrap;
+  -webkit-flex-flow: row wrap;
+  justify-content: space-between;
+  -ms-justify-content: space-between;
+}
+
+.toy-pb-shop-by-age-option-block {
+  width: 48.5%;
+}
+
+.toy-pb-shop-by-age-option-block a {
+  text-decoration: none;
+}
+
+.toy-pb-shop-by-age-btn {
+  width: 100%;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  margin-bottom: 10px;
+}
+
+.toy-pb-shop-by-age-btn p {
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.holiday-toy-finder-shop-by-age-pb hr {
+  display: block;
+  width: 100%;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: .8em 0 1em 0;
+  padding: 0;
+}
+
+
 /*==================
  min width 331px
 ===================*/
@@ -1410,6 +1527,18 @@ div.mktg-theme-wrapped-h4 a {
     padding-bottom:1%;
   }
 
+  .toy-pb-shop-by-age-title-block {
+    width: 30%;
+  }
+
+  .toy-pb-shop-all-block {
+    width: 24.5%;
+  }
+
+  .toy-pb-shop-by-age-option-block {
+    width: 24.5%;
+  }
+
 }
 
 /*==================
@@ -1460,6 +1589,33 @@ div.mktg-theme-wrapped-h4 a {
 
   .plp-top-cat-pg-horizontal-nav nav ul li a {
     font-size: 15px;
+  }
+}
+
+/*==================
+ min width 1024px
+===================*/
+@media screen and (min-width:1024px){
+  .holiday-toy-finder-shop-by-age-pb hr {
+    display: none;
+  }
+
+  .toy-pb-shop-by-age-title-block {
+    width: 19%;
+    order: 1;
+  }
+
+  .toy-pb-shop-all-block {
+    width: 14.08%;
+    order: 3;
+  }
+
+  .toy-pb-shop-by-age-4optns-block {
+    width: 59.5%;
+    order: 2;
+  }
+  .toy-pb-shop-by-age-option-block {
+    width: 24%;
   }
 }
 
