--- a/css/main.css
+++ b/css/main.css
@@ -1205,6 +1205,10 @@ PORTFOLIO INDEX PAGES | iPhone5 | NO min width
   height: auto;
 }
 
+.porfolio-thumb-title {
+  background: #000;
+}
+
 /*==================================================
 PORTFOLIO INDIVIDUAL PAGES | iPhone5 | NO min width
 ===================================================*/
